--- a/script.ipynb
+++ b/script.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f80c8b43-f9de-472e-a047-46d8fc0afb6f",
+   "id": "8cc4d78b-a42e-488f-9743-92e4132371c8",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -11,17 +11,11 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "R",
-   "language": "R",
-   "name": "ir"
+   "display_name": "",
+   "name": ""
   },
   "language_info": {
-   "codemirror_mode": "r",
-   "file_extension": ".r",
-   "mimetype": "text/x-r-source",
-   "name": "R",
-   "pygments_lexer": "r",
-   "version": "4.4.2"
+   "name": ""
   }
  },
  "nbformat": 4,
